# dlwp-hpx

./: ._README.md  README.md  pyproject.toml
figures/blender/: hpx1.blend  hpx2.blend  hpx4.blend  hpx4.blend1  hpx8.blend  hpx8_stencil-corner.blend  hpx_coastlines.blend  hpx_template.blend
figures/tikz/forward_schematic/: forward_schematic.tex
figures/tikz/healpix/healpix_description/: healpix_description.aux  healpix_description.bbl  healpix_description.blg  healpix_description.tex  literature.bib
figures/tikz/model/conv_block/: conv_block.tex
figures/tikz/model/convnext_block/: convnext_block.tex
figures/tikz/model/downscale_block/: downscale_block.tex
figures/tikz/model/gru_block/: gru_block.tex
figures/tikz/model/resnet_block/: resnet_block.tex
figures/tikz/model/unet/: unet.tex
figures/tikz/model/unet3+/: unet3+.tex
figures/tikz/model/unet3+_inverted/: unet3+_inverted.tex
figures/tikz/model/unet3+_inverted_rec/: unet3+_inverted_rec.tex
figures/tikz/model/unet_inverted/: unet_inverted.tex
figures/tikz/model/unet_inverted_rec/: unet_inverted_rec.tex
src/dlwp-hpx/configs/: ._config.yaml
src/dlwp-hpx/data/: ._data_pipeline.md  ._era5_download.py  ._tau_calculation.py  data_pipeline.md  era5_download.py  forecast.nc  tau_calculation.py
src/dlwp-hpx/dlwp/: .___init__.py  ._utils.py
src/dlwp-hpx/remap/: .___init__.py  ._base.py  ._cubesphere.py  ._healpix.py  cubesphere.py  healpix.py
src/dlwp-hpx/scripts/: ._forecast.py  ._run_mercury_matze.sh  ._run_training.sh  ._train.py  forecast.py  run_training.sh  train.py
(+132 files in other folders)
